spec: Make sure libvirt-daemon-config-network is installed (bz 950329)

--- a/virt-manager.spec.in
+++ b/virt-manager.spec.in
@@ -5,7 +5,7 @@
 %define disable_unsupported_rhel   0
 %define askpass_package            "openssh-askpass"
 %define qemu_user                  "qemu"
-%define libvirt_packages           "libvirt-daemon-kvm"
+%define libvirt_packages           "libvirt-daemon-kvm,libvirt-daemon-config-network"
 %define preferred_distros          "fedora,rhel"
 %define kvm_packages               "qemu-system-x86"
 
