One more vnc->spice cleanup
Last commit changing the default was de1695b2, but there was still one
place in man page left and the spec file was left dirty.  This is
hopefully the last vnc->spice patch

Signed-off-by: Martin Kletzander <mkletzan@redhat.com>

--- a/virt-manager.spec.in
+++ b/virt-manager.spec.in
@@ -8,6 +8,7 @@
 %define libvirt_packages           "libvirt-daemon-kvm,libvirt-daemon-config-network"
 %define preferred_distros          "fedora,rhel"
 %define kvm_packages               "qemu-system-x86"
+%define default_graphics           "spice"
 
 %if 0%{?rhel}
 %define preferred_distros          "rhel,fedora"
@@ -128,9 +129,12 @@ machine).
 %define _disable_unsupported_rhel --hide-unsupported-rhel-options
 %endif
 
+%if %{default_graphics}
+%define _default_graphics --default-graphics=%{default_graphics}
+%endif
+
 python setup.py configure \
     --pkgversion="%{version}" \
-    --default-graphics="spice" \
     %{?_qemu_user} \
     %{?_kvm_packages} \
     %{?_libvirt_packages} \
