Prep for release 0.10.0

--- a/.tx/config
+++ b/.tx/config
@@ -1,5 +1,5 @@
 [main]
-host = https://www.transifex.net
+host = https://www.transifex.com
 
 [virt-manager.virt-managerpot]
 file_filter = po/<lang>.po
