VirtualConnection: Allow using virt-manager object caches
So when we call into virtinst it doesn't do a whole round of object
lookup and XML fetching.

--- a/tests/pylint.cfg
+++ b/tests/pylint.cfg
@@ -42,6 +42,7 @@ load-plugins=
 # I0011: Warn about locally disabled pylint msgs
 # R0201: Method could be a function
 #
+# W0108: Lambda may not be necessary
 # W0142: Used * or ** magic*
 # W0603: Using the global statement
 # W0702: No exception type specified for 'catch'
@@ -53,7 +54,7 @@ load-plugins=
 # W1001: Use of 'property' on old style class,
 #        pylint can't detect our Gtk subclasses are new style
 # W0511: FIXME and XXX: messages
-disable=Design,Similarities,C0103,C0111,C0301,C0302,I0011,R0201,W0142,W0603,W0702,W0703,W1401,W1001,W0511
+disable=Design,Similarities,C0103,C0111,C0301,C0302,I0011,R0201,W0108,W0142,W0603,W0702,W0703,W1401,W1001,W0511
 
 
 [REPORTS]
