--- a/virt-manager.spec.in
+++ b/virt-manager.spec.in
@@ -242,7 +242,7 @@ fi
 
 * Mon Jul 09 2012 Cole Robinson <crobinso@redhat.com> - 0.9.2-1
 - virt-manager release 0.9.2
-- Convert to gtkbuilder: UI can now be editted with modern glade tool
+- Convert to gtkbuilder: UI can now be edited with modern glade tool
 - virt-manager no longer runs on RHEL5, but can manage a remote RHEL5
   host
 - Option to configure spapr net and disk devices for pseries (Li Zhang)
