Remove gconf dep, Require dconf

--- a/virt-manager.spec.in
+++ b/virt-manager.spec.in
@@ -46,9 +46,9 @@ Requires: virt-manager-common = %{verrel}
 Requires: pygobject3
 Requires: gtk3
 Requires: libvirt-glib >= 0.0.9
-Requires: gnome-python2-gconf
 Requires: libxml2-python
 Requires: vte3
+Requires: dconf
 
 # For console widget
 Requires: gtk-vnc2
