spec: Require dbus-x11 (bz 1039803)
virt-manager is one of those tools that people will often install when
no traditional desktop is present. dbus-x11 is pulled in by desktop
environments, but not by gtk3 for (presumably) legitimate reasons.
But we need it to do anything worthwhile with dbus.

--- a/virt-manager.spec.in
+++ b/virt-manager.spec.in
@@ -49,6 +49,7 @@ Requires: libvirt-glib >= 0.0.9
 Requires: libxml2-python
 Requires: vte3
 Requires: dconf
+Requires: dbus-x11
 
 # For console widget
 Requires: gtk-vnc2
