virt-xml: Initial commit, basic set of tests

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@ po/virt-manager.pot
 /man/virt-image.1
 /man/virt-convert.1
 /man/virt-image.5
+/man/virt-xml.1
 
 /virt-manager.spec
 /virtcli/cli.cfg
