--- a/virt-manager.spec.in
+++ b/virt-manager.spec.in
@@ -93,6 +93,7 @@ Provides: virt-install
 Provides: virt-clone
 Provides: virt-image
 Provides: virt-convert
+Provides: virt-xml
 Obsoletes: python-virtinst
 
 %description -n virt-install
@@ -194,6 +195,7 @@ fi
 %{_mandir}/man1/virt-install.1*
 %{_mandir}/man1/virt-clone.1*
 %{_mandir}/man1/virt-convert.1*
+%{_mandir}/man1/virt-xml.1*
 %{_mandir}/man1/virt-image.1*
 %{_mandir}/man5/virt-image.5*
 
@@ -201,11 +203,13 @@ fi
 %{_datadir}/%{name}/virt-clone
 %{_datadir}/%{name}/virt-image
 %{_datadir}/%{name}/virt-convert
+%{_datadir}/%{name}/virt-xml
 
 %{_bindir}/virt-install
 %{_bindir}/virt-clone
 %{_bindir}/virt-image
 %{_bindir}/virt-convert
+%{_bindir}/virt-xml
 
 
 %changelog
