--- a/virt-manager.spec.in
+++ b/virt-manager.spec.in
@@ -46,6 +46,7 @@ Requires: libxml2-python
 Requires: vte3
 Requires: dconf
 Requires: dbus-x11
+Requires: libosinfo >= 0.2.10
 
 # For console widget
 Requires: gtk-vnc2
