Turn off some warnings with latest pylint

--- a/tests/pylint.cfg
+++ b/tests/pylint.cfg
@@ -39,6 +39,8 @@ load-plugins=
 # C0111: No docstring
 # C0301: Line too long
 # C0302: Too many lines in module
+# C0325: Superfluous parens
+# C0326: Bad whitespace
 # I0011: Warn about locally disabled pylint msgs
 # R0201: Method could be a function
 #
@@ -54,7 +56,7 @@ load-plugins=
 # W1001: Use of 'property' on old style class,
 #        pylint can't detect our Gtk subclasses are new style
 # W0511: FIXME and XXX: messages
-disable=Design,Similarities,C0103,C0111,C0301,C0302,I0011,R0201,W0108,W0142,W0603,W0702,W0703,W1401,W1001,W0511
+disable=Design,Similarities,C0103,C0111,C0301,C0302,C0325,C0326,I0011,R0201,W0108,W0142,W0603,W0702,W0703,W1401,W1001,W0511
 
 
 [REPORTS]
