Prep for release 1.0.1

--- a/virt-manager.spec.in
+++ b/virt-manager.spec.in
@@ -209,6 +209,15 @@ fi
 
 
 %changelog
+* Sat Mar 22 2014 Cole Robinson <crobinso@redhat.com> - 1.0.1-1
+- virt-manager release 1.0.1
+- virt-install/virt-xml: New --memorybacking option (Chen Hanxiao)
+- virt-install/virt-xml: New --memtune option (Chen Hanxiao)
+- virt-manager: UI for LXC <idmap> (Chen Hanxiao)
+- virt-manager: gsettings key to disable keygrab (Kjö Hansi Glaz)
+- virt-manager: Show domain state reason in the UI (Giuseppe Scrivano)
+- Fix a number of bugs found since the 1.0.0 release
+
 * Fri Feb 14 2014 Cole Robinson <crobinso@redhat.com> - 1.0.0-1
 - virt-manager release 1.0.0
 - virt-manager: Snapshot support
