Clean up pylint integration
- Drop no longer needed disable= bits
- Use string names for all skipped pylint messages

--- a/tests/pylint.cfg
+++ b/tests/pylint.cfg
@@ -34,29 +34,7 @@ load-plugins=
 # multiple time (only on the command line, not in the configuration file where
 # it should appear only once).
 
-# Design: Things like 'too many arguments'
-# C0103: Name doesn't match some style regex
-# C0111: No docstring
-# C0301: Line too long
-# C0302: Too many lines in module
-# C0325: Superfluous parens
-# C0326: Bad whitespace
-# I0011: Warn about locally disabled pylint msgs
-# R0201: Method could be a function
-#
-# W0108: Lambda may not be necessary
-# W0142: Used * or ** magic*
-# W0603: Using the global statement
-# W0702: No exception type specified for 'catch'
-# W0703: Catch 'Exception'
-# W1401: Anomalous backslash in string
-#
-# May be useful to enable someday
-# Similarities: Code duplication
-# W1001: Use of 'property' on old style class,
-#        pylint can't detect our Gtk subclasses are new style
-# W0511: FIXME and XXX: messages
-disable=Design,Similarities,C0103,C0111,C0301,C0302,C0325,C0326,I0011,R0201,W0108,W0142,W0603,W0702,W0703,W1401,W1001,W0511
+disable=Design,Similarities,invalid-name,missing-docstring,line-too-long,too-many-lines,superfluous-parens,bad-whitespace,locally-disabled,no-self-use,unnecessary-lambda,star-args,fixme,global-statement,bare-except,anomalous-backslash-in-string,broad-except
 
 
 [REPORTS]
