Fix warnings with latest pep8

--- a/tests/pep8.cfg
+++ b/tests/pep8.cfg
@@ -2,7 +2,7 @@
 
 format = pylint
 
-# E12*:            # Continuation line indents
+# E1* :            # Continuation line indents
 # E203:            # Space before : in dictionary defs
 # E221:            # Multiple spaces before operator
 #                    (warngs about column aligning assigments)
@@ -11,4 +11,4 @@ format = pylint
 # E303:            # Too many blank lines
 # E501:            # Line too long
 
-ignore=E121,E122,E123,E124,E125,E126,E127,E128,E203,E221,E241,E301,E303,E501
+ignore=E121,E122,E123,E124,E125,E126,E127,E128,E129,E131,E203,E221,E241,E301,E303,E501
