spec: Install the gconf .convert file

--- a/virt-manager.spec.in
+++ b/virt-manager.spec.in
@@ -177,6 +177,7 @@ fi
 %{_datadir}/appdata/%{name}.appdata.xml
 %{_datadir}/applications/%{name}.desktop
 %{_datadir}/glib-2.0/schemas/org.virt-manager.virt-manager.gschema.xml
+%{_datadir}/GConf/gsettings/org.virt-manager.virt-manager.convert
 
 
 %files common -f %{name}.lang
