spec: add a dependency on "gnome-icon-theme"
virt-manager uses some icons included in the gnome-icon-theme package.
Make it explicit and add a dependency.

Desktop folks agree that this is the place where to add this
dependency as adding it to gtk is too problematic.

Closes: https://bugzilla.redhat.com/show_bug.cgi?id=1146612

Signed-off-by: Giuseppe Scrivano <gscrivan@redhat.com>

--- a/virt-manager.spec.in
+++ b/virt-manager.spec.in
@@ -51,6 +51,7 @@ Requires: libosinfo >= 0.2.10
 # For console widget
 Requires: gtk-vnc2
 Requires: spice-gtk3
+Requires: gnome-icon-theme
 
 
 BuildRequires: intltool
