spec: Add BuildRequires: python for f22/rawhide

--- a/virt-manager.spec.in
+++ b/virt-manager.spec.in
@@ -53,6 +53,7 @@ Requires: spice-gtk3
 Requires: gnome-icon-theme
 
 
+BuildRequires: python
 BuildRequires: intltool
 BuildRequires: /usr/bin/pod2man
 
