spec: Add pygobject3-base dep for virt-install (bz 1195794)

--- a/virt-manager.spec.in
+++ b/virt-manager.spec.in
@@ -70,6 +70,8 @@ Requires: libxml2-python
 Requires: python-urlgrabber
 Requires: python-ipaddr
 Requires: libosinfo >= 0.2.10
+# Required for gobject-introspection infrastructure
+Requires: pygobject3-base
 
 %description common
 Common files used by the different virt-manager interfaces, as well as
