spec: Only pull in gnome-icon-theme on RHEL7 (bz 1207061)
It's the wrong dep on F21+, and it's redundant there anyways. So just
restrict this to RHEL7 where the bug was reported, come RHEL8 time
it likely won't be relevant.

--- a/virt-manager.spec.in
+++ b/virt-manager.spec.in
@@ -43,7 +43,10 @@ Requires: dbus-x11
 # For console widget
 Requires: gtk-vnc2
 Requires: spice-gtk3
+
+%if 0%{?rhel} == 7
 Requires: gnome-icon-theme
+%endif
 
 
 BuildRequires: python
