spec: Don't use hardcode lookup of qemu-system-x86
libvirt-daemon-kvm pulls in the correct emulator dep per architecture

--- a/virt-manager.spec.in
+++ b/virt-manager.spec.in
@@ -6,8 +6,8 @@
 %define askpass_package            "openssh-askpass"
 %define qemu_user                  "qemu"
 %define libvirt_packages           "libvirt-daemon-kvm,libvirt-daemon-config-network"
+%define kvm_packages               ""
 %define preferred_distros          "fedora,rhel"
-%define kvm_packages               "qemu-system-x86"
 %define default_hvs                "qemu,xen"
 
 %if 0%{?rhel}
