Update documentation to point to github, other minor tweaks

--- a/virt-manager.spec.in
+++ b/virt-manager.spec.in
@@ -23,7 +23,7 @@ Version: @VERSION@
 Release: 1%{?dist}
 %define verrel %{version}-%{release}
 
-Summary: Virtual Machine Manager
+Summary: Desktop tool for managing virtual machines via libvirt
 Group: Applications/Emulators
 License: GPLv2+
 URL: http://virt-manager.org/
