urlfetcher: Switch to requests and urllib2 instead of urlgrabber
urlgrabber is largely dead upstream and isn't going to be ported to
python3 AFAIK. So we will need to move off of it eventually.

Use requests for http handling which is the most common library nowadays,
and just plain old urllib2 for ftp fetching.

--- a/virt-manager.spec.in
+++ b/virt-manager.spec.in
@@ -70,6 +70,7 @@ Group: Applications/Emulators
 # however varying amounts of functionality will not be enabled.
 Requires: libvirt-python >= 0.7.0
 Requires: libxml2-python
+Requires: python-requests
 Requires: python-urlgrabber
 Requires: python-ipaddr
 Requires: libosinfo >= 0.2.10
