--- a/tests/pep8.cfg
+++ b/tests/pep8.cfg
@@ -9,6 +9,7 @@ format = pylint
 # E241:            # Space after , column alignment nono
 # E301:            # 1 blank line between methods
 # E303:            # Too many blank lines
+# E402:            # [E402] module level import not at top of file
 # E501:            # Line too long
 
-ignore=E121,E122,E123,E124,E125,E126,E127,E128,E129,E131,E203,E221,E241,E301,E303,E501
+ignore=E121,E122,E123,E124,E125,E126,E127,E128,E129,E131,E203,E221,E241,E301,E303,E402,E501
