Use #!/usr/bin/env for python scripts
This is recommended for upstream, but not for downstream, like Fedora.
So change /usr/bin/env to /usr/bin/python2 at RPM install time to
match the ideal Fedora config.

https://fedoraproject.org/wiki/Features/SystemPythonExecutablesUseSystemPython
https://bugzilla.redhat.com/show_bug.cgi?id=1303282

--- a/virt-manager.spec.in
+++ b/virt-manager.spec.in
@@ -106,6 +106,7 @@ machine).
 %prep
 %setup -q
 
+
 %build
 %if %{qemu_user}
 %global _qemu_user --qemu-user=%{qemu_user}
@@ -150,6 +151,13 @@ python setup.py \
     --no-update-icon-cache --no-compile-schemas \
     install -O1 --root=%{buildroot}
 %find_lang %{name}
+
+# Replace '#!/usr/bin/env python2' with '#!/usr/bin/python2'
+# The format is ideal for upstream, but not a distro. See:
+# https://fedoraproject.org/wiki/Features/SystemPythonExecutablesUseSystemPython
+for f in $(find %{buildroot} -type f -executable -print); do
+    sed -i "1 s|^#!/usr/bin/env python2|#!%{__python2}|" $f || :
+done
 
 # The conversion script was only added to virt-manager after several
 # Fedora cycles of using gsettings. Installing it now could convert old data
