spec: Add dep on python2-devel
This is needed to pull in the __python2 RPM macro

--- a/virt-manager.spec.in
+++ b/virt-manager.spec.in
@@ -54,9 +54,10 @@ Requires: gnome-icon-theme
 %endif
 
 
-BuildRequires: python
 BuildRequires: intltool
 BuildRequires: /usr/bin/pod2man
+# For python, and python2 rpm macros
+BuildRequires: python2-devel
 
 
 %description
